support for only spilling some buffers from main thread